force-app/main/default/objects/ssot__WorkResourceSkill__dlm/fields/ssot__rel_1737626577679_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1737626577679_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResourceSkill_SkillId_map_Skill__rel</label>
    <referenceTo>ssot__Skill__dlm</referenceTo>
    <relationshipLabel>WorkResourceSkill_SkillId_map_Skill__rel</relationshipLabel>
    <relationshipName>rel_1737626577679_end</relationshipName>
    <type>Lookup</type>
</CustomField>