force-app/main/default/objects/ssot__WorkResourceSkill__dlm/fields/ssot__rel_1737626598622_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1737626598622_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResourceSkill_CreatedById_map_Us_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>WorkResourceSkill_CreatedById_map_Us_rel</relationshipLabel>
    <relationshipName>rel_1737626598622_end</relationshipName>
    <type>Lookup</type>
</CustomField>