force-app/main/default/objects/ssot__WorkResourceSkill__dlm/fields/ssot__WorkResourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkResourceId__c</fullName>
    <label>Work Resource</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkResourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>